Fix to CURRIKI-2770 - removing some spacing from NortelLearniTLessonPlan header and adding negative bottom margin to image (not sure that will work in IE)
svn@13355

--- a/web/src/main/webapp/skins/curriki8/style2.css
+++ b/web/src/main/webapp/skins/curriki8/style2.css
@@ -377,7 +377,15 @@ form em, .header em { font-style: normal; }
 .gwt-Tree .asset-tree-item .gwt-TreeItem { display: block !important; }
 
 /* CURRIKI-2416 - Add spacing in NortelLearniTLessonPlan header */
-.lesson-plan-learn-line { padding-top: 8px; }
+/* .lesson-plan-learn-line { padding-top: 8px; } */
+
+/* CURRIKI-2770 - Removing some spacing in NortelLearniTLessonPlan header */
+.lesson-plan-learn-line {
+    padding:0;
+}
+.lesson-plan-learn-line img {
+    margin-bottom:-15px;
+}
 
 
 /* CURRIKI-2444 - Printing needs overflow to be visible */
